<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="20dp"
        android:background="#65FAE7">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/study"
            android:layout_centerVertical="true"
            android:contentDescription="@string/logo" />
        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/study_online"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#232322"
            android:fontFamily="@font/ps_r"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/logo"
            android:layout_marginStart="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turn_your_passion_into_your_profession"
            android:textSize="13sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:fontFamily="@font/ps_r"
            android:textColor="#232322"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/logo"
            android:layout_below="@+id/header"
            android:layout_marginStart="15dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_marginTop="-100dp"
        android:layout_width="match_parent"
        android:padding="20dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/createaccount"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp">
            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:padding="5dp">

                <TextView
                    android:includeFontPadding="false"
                    android:layout_centerInParent="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/new_user_register_here"
                    android:fontFamily="@font/ps_r"
                    android:textColor="#2c2d2f"
                    android:textSize="20sp" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_login"
            android:textColor="#2c2d2f"
            android:fontFamily="@font/ps_r"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"/>


            <EditText
                android:id="@+id/lemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="#2c2d2f"
                android:padding="15dp"
                android:hint="@string/email"
                android:fontFamily="@font/ps_b"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="15dp"
                android:autofillHints="Email" />


            <EditText
                android:id="@+id/lpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="#2c2d2f"
                android:padding="15dp"
                android:hint="@string/password"
                android:fontFamily="@font/ps_b"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="15dp"
                android:autofillHints="" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/sign_in"
            android:textColor="#fff"
            android:textStyle="bold"
            android:fontFamily="@font/ps_b"
            android:textSize="20sp"
            android:background="@drawable/buttonback"/>
    </LinearLayout>


</LinearLayout>