<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Complete_Profile"
    android:orientation="vertical"
    android:background="#65FAE7">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="20dp"
        android:background="#65FAE7">

        <TextView
            android:id="@+id/yp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:text="@string/study_online"
            android:fontFamily="@font/ps_b"
            android:textColor="#232322"
            android:textSize="30sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_fill_up_the_form_with_required_details"
            android:textSize="15sp"
            android:textColor="#232322"
            android:gravity="center"
            android:fontFamily="@font/ps_b"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/yp"
            android:layout_centerInParent="true"
            android:layout_marginStart="15dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="20dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/loginpage"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:elevation="15dp"
            app:cardCornerRadius="30dp">
            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:padding="5dp">
                    <ImageView
                        android:id="@+id/uimage"
                        android:layout_width="100dp"
                        android:layout_height="110dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/photologo"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/profile_photo" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/uimage"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/your_name"
                    android:fontFamily="@font/ps_b"
                    android:inputType="textPersonName"
                    android:textColor="#2c2d2f"
                    android:textSize="20sp"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/useremail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/username"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/email"
                    android:fontFamily="@font/ps_b"
                    android:inputType="textEmailAddress"
                    android:textColor="#2c2d2f"
                    android:textSize="20sp"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/useremail"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:fontFamily="@font/ps_b"
                    android:textColor="#2c2d2f"
                    android:textSize="20sp"
                    android:importantForAutofill="no" />

                <Button
                    android:id="@+id/upload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/upload"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:fontFamily="@font/ps_b"
                    android:layout_below="@+id/phone"
                    android:background="@drawable/buttonback"/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>