<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".about"
    android:background="#65FAE7">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/study"
        android:layout_centerInParent="true"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="20dp"
        android:textColor="#232322"
        android:textSize="18sp"
        android:fontFamily="@font/ps_r"
        android:text="@string/version"
        android:layout_centerHorizontal="true"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Our New Website: "
        android:layout_below="@+id/version"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Click Here"
        android:layout_below="@+id/version"
        android:layout_marginTop="30sp"
        android:textSize="20sp"
        android:textColor="#f0f"
        android:onClick="Visit"
        android:gravity="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#2c2d2f">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="#fff"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/ps_b"
            android:layout_marginRight="20dp"
            android:layout_centerInParent="true"
            android:text="@string/study_online_t_t_t_t_t_t_t_t_t_t_t_t_t_t_t_t_t_u00a9_sammit_pal" />

    </RelativeLayout>



</RelativeLayout>